--- a/src/UI/ApplicantJPanel.form
+++ b/src/UI/ApplicantJPanel.form
@@ -318,16 +318,22 @@
         <Component class="javax.swing.JTable" name="petTbl">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="0">
+              <Table columnCount="6" rowCount="0">
                 <Column editable="true" title="Pet Name" type="java.lang.Object"/>
                 <Column editable="true" title="Pet Age" type="java.lang.Object"/>
                 <Column editable="true" title="Pet Gender" type="java.lang.Object"/>
                 <Column editable="true" title="Pet Breed" type="java.lang.Object"/>
                 <Column editable="true" title="Pet Type" type="java.lang.Object"/>
+                <Column editable="true" title="Owner Name" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
